# pi4_custom_iso

./: .gitignore  Cargo.toml  LICENSE  README.md  analysis_core_architecture.txt
config/: config
hooks/: RESIZE_ROOTFS.sh
src/python/: boltz_jones.py  test_boltz_jones.py
src/rust/: beat_manager.rs  boltz_jones.rs  test_boltz_jones.rs
src/rust/osc/: mod.rs
stages/01-packages/: stage.conf
stages/02-customize/: 01-jack_rt.sh  02-rust.sh  03-python_tf.sh  04-cpp_deps.sh  05-x11.sh  06-tests.sh  07-services.sh  08-autologin.sh  09-osc.sh
stages/03-cleanup/: stage.conf
